@@ -1,3 +1,11 @@
+lilv (9999) unstable;
+
+  * Fix Lilv::Instance API to handle features and failed instantiations
+  * Deprecate old flawed Lilv::Instance constructors
+  * Add Lilv::Instance::get_handle() and Lilv::Instance::get_extension_data()
+
+ -- David Robillard <d@drobilla.net>
+
 lilv (0.14.2) stable;
 
   * Fix dynmanifest support
